--- a/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
@@ -696,6 +696,41 @@ margin-bottom: 20px;
   <script>
     // Script section to load models into a JS Var
     var defs = {}
+            defs.EnumInArrayOfArray = {
+  "type" : "object",
+  "properties" : {
+    "p1" : {
+      "type" : "array",
+      "items" : {
+        "type" : "string",
+        "enum" : [ "valA", "valB", "valC" ]
+      }
+    },
+    "p2" : {
+      "type" : "array",
+      "items" : {
+        "type" : "array",
+        "items" : {
+          "type" : "string",
+          "enum" : [ "val1", "val2", "val3" ]
+        }
+      }
+    },
+    "p3" : {
+      "type" : "array",
+      "items" : {
+        "type" : "array",
+        "items" : {
+          "type" : "array",
+          "items" : {
+            "type" : "string",
+            "enum" : [ "lorem", "ipsum" ]
+          }
+        }
+      }
+    }
+  }
+};
             defs.ItemWithBoolean = {
   "type" : "object",
   "properties" : {
@@ -745,6 +780,9 @@ margin-bottom: 20px;
                     </li>
                     <li data-group="Default" data-name="issue7754" class="">
                       <a href="#api-Default-issue7754">issue7754</a>
+                    </li>
+                    <li data-group="Default" data-name="pull66" class="">
+                      <a href="#api-Default-pull66">pull66</a>
                     </li>
           </ul>
         </nav>
@@ -1272,6 +1310,255 @@ except ApiException as e:
                                   </div>
                                   <input id='responses-issue7754-200-schema-data' type='hidden' value=''></input>
                                 </div>
+                            </div>
+
+                        </article>
+                      </div>
+                      <hr>
+                    <div id="api-Default-pull66">
+                      <article id="api-Default-pull66-0" data-group="User" data-name="pull66" data-version="0">
+                        <div class="pull-left">
+                          <h1>pull66</h1>
+                          <p></p>
+                        </div>
+                        <div class="pull-right"></div>
+                        <div class="clearfix"></div>
+                        <p></p>
+                        <p class="marked"></p>
+                        <p></p>
+                        <br />
+                        <pre class="prettyprint language-html prettyprinted" data-type="get"><code><span class="pln">/pull66</span></code></pre>
+                        <p>
+                          <h3>Usage and SDK Samples</h3>
+                        </p>
+                        <ul class="nav nav-tabs nav-tabs-examples">
+                          <li class="active"><a href="#examples-Default-pull66-0-curl">Curl</a></li>
+                          <li class=""><a href="#examples-Default-pull66-0-java">Java</a></li>
+                          <li class=""><a href="#examples-Default-pull66-0-android">Android</a></li>
+                          <!--<li class=""><a href="#examples-Default-pull66-0-groovy">Groovy</a></li>-->
+                          <li class=""><a href="#examples-Default-pull66-0-objc">Obj-C</a></li>
+                          <li class=""><a href="#examples-Default-pull66-0-javascript">JavaScript</a></li>
+                          <!--<li class=""><a href="#examples-Default-pull66-0-angular">Angular</a></li>-->
+                          <li class=""><a href="#examples-Default-pull66-0-csharp">C#</a></li>
+                          <li class=""><a href="#examples-Default-pull66-0-php">PHP</a></li>
+                          <li class=""><a href="#examples-Default-pull66-0-perl">Perl</a></li>
+                          <li class=""><a href="#examples-Default-pull66-0-python">Python</a></li>
+                        </ul>
+
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="examples-Default-pull66-0-curl">
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "http://api.company.xyz/v2/pull66"</code></pre>
+                          </div>
+                          <div class="tab-pane" id="examples-Default-pull66-0-java">
+                            <pre class="prettyprint"><code class="language-java">import org.openapitools.client.*;
+import org.openapitools.client.auth.*;
+import org.openapitools.client.model.*;
+import org.openapitools.client.api.DefaultApi;
+
+import java.io.File;
+import java.util.*;
+
+public class DefaultApiExample {
+
+    public static void main(String[] args) {
+        
+        DefaultApi apiInstance = new DefaultApi();
+        EnumInArrayOfArray enumInArrayOfArray = ; // EnumInArrayOfArray | 
+        try {
+            apiInstance.pull66(enumInArrayOfArray);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling DefaultApi#pull66");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+
+                          <div class="tab-pane" id="examples-Default-pull66-0-android">
+                            <pre class="prettyprint"><code class="language-java">import org.openapitools.client.api.DefaultApi;
+
+public class DefaultApiExample {
+
+    public static void main(String[] args) {
+        DefaultApi apiInstance = new DefaultApi();
+        EnumInArrayOfArray enumInArrayOfArray = ; // EnumInArrayOfArray | 
+        try {
+            apiInstance.pull66(enumInArrayOfArray);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling DefaultApi#pull66");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+  <!--
+  <div class="tab-pane" id="examples-Default-pull66-0-groovy">
+  <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+  </div> -->
+                            <div class="tab-pane" id="examples-Default-pull66-0-objc">
+                              <pre class="prettyprint"><code class="language-cpp">EnumInArrayOfArray *enumInArrayOfArray = ; //  (optional)
+
+DefaultApi *apiInstance = [[DefaultApi alloc] init];
+
+[apiInstance pull66With:enumInArrayOfArray
+              completionHandler: ^(NSError* error) {
+                            if (error) {
+                                NSLog(@"Error: %@", error);
+                            }
+                        }];
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-pull66-0-javascript">
+                              <pre class="prettyprint"><code class="language-js">var OpenApiTreePots = require('open_api_tree_pots');
+
+var api = new OpenApiTreePots.DefaultApi()
+var opts = {
+  'enumInArrayOfArray':  // {EnumInArrayOfArray} 
+};
+
+var callback = function(error, data, response) {
+  if (error) {
+    console.error(error);
+  } else {
+    console.log('API called successfully.');
+  }
+};
+api.pull66(opts, callback);
+</code></pre>
+                            </div>
+
+                            <!--<div class="tab-pane" id="examples-Default-pull66-0-angular">
+              <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+            </div>-->
+                            <div class="tab-pane" id="examples-Default-pull66-0-csharp">
+                              <pre class="prettyprint"><code class="language-cs">using System;
+using System.Diagnostics;
+using Org.OpenAPITools.Api;
+using Org.OpenAPITools.Client;
+using Org.OpenAPITools.Model;
+
+namespace Example
+{
+    public class pull66Example
+    {
+        public void main()
+        {
+            
+            var apiInstance = new DefaultApi();
+            var enumInArrayOfArray = new EnumInArrayOfArray(); // EnumInArrayOfArray |  (optional) 
+
+            try
+            {
+                apiInstance.pull66(enumInArrayOfArray);
+            }
+            catch (Exception e)
+            {
+                Debug.Print("Exception when calling DefaultApi.pull66: " + e.Message );
+            }
+        }
+    }
+}
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-pull66-0-php">
+                              <pre class="prettyprint"><code class="language-php"><&#63;php
+require_once(__DIR__ . '/vendor/autoload.php');
+
+$api_instance = new OpenAPITools\Client\Api\DefaultApi();
+$enumInArrayOfArray = ; // EnumInArrayOfArray | 
+
+try {
+    $api_instance->pull66($enumInArrayOfArray);
+} catch (Exception $e) {
+    echo 'Exception when calling DefaultApi->pull66: ', $e->getMessage(), PHP_EOL;
+}
+?></code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-pull66-0-perl">
+                              <pre class="prettyprint"><code class="language-perl">use Data::Dumper;
+use WWW::OPenAPIClient::Configuration;
+use WWW::OPenAPIClient::DefaultApi;
+
+my $api_instance = WWW::OPenAPIClient::DefaultApi->new();
+my $enumInArrayOfArray = WWW::OPenAPIClient::Object::EnumInArrayOfArray->new(); # EnumInArrayOfArray | 
+
+eval { 
+    $api_instance->pull66(enumInArrayOfArray => $enumInArrayOfArray);
+};
+if ($@) {
+    warn "Exception when calling DefaultApi->pull66: $@\n";
+}</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-pull66-0-python">
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+import time
+import openapi_client
+from openapi_client.rest import ApiException
+from pprint import pprint
+
+# create an instance of the API class
+api_instance = openapi_client.DefaultApi()
+enumInArrayOfArray =  # EnumInArrayOfArray |  (optional)
+
+try: 
+    api_instance.pull66(enumInArrayOfArray=enumInArrayOfArray)
+except ApiException as e:
+    print("Exception when calling DefaultApi->pull66: %s\n" % e)</code></pre>
+                            </div>
+                          </div>
+
+                          <h2>Parameters</h2>
+
+
+
+                            <div class="methodsubtabletitle">Body parameters</div>
+                            <table id="methodsubtable">
+                              <tr>
+                                <th width="150px">Name</th>
+                                <th>Description</th>
+                              </tr>
+                                <tr><td style="width:150px;">enumInArrayOfArray </td>
+<td>
+
+
+<script>
+$(document).ready(function() {
+  var schemaWrapper = ;
+  var schema = schemaWrapper.schema;
+  if (schema.$ref != null) {
+    schema = defsParser.$refs.get(schema.$ref);
+  } else {
+    schemaWrapper.definitions = Object.assign({}, defs);
+    $RefParser.dereference(schemaWrapper).catch(function(err) {
+      console.log(err);
+    });
+  }
+
+  var view = new JSONSchemaView(schema,2,{isBodyParam: true});
+  var result = $('#d2e199_pull66_enumInArrayOfArray');
+  result.empty();
+  result.append(view.render());
+});
+</script>
+<div id="d2e199_pull66_enumInArrayOfArray"></div>
+</td>
+</tr>
+
+                            </table>
+
+
+
+                          <h2>Responses</h2>
+                            <h3> Status: 200 - Ok </h3>
+
+                            <ul class="nav nav-tabs nav-tabs-examples" >
+                            </ul>
+
+                            <div class="tab-content" style='margin-bottom: 10px;'>
                             </div>
 
                         </article>
