--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -198,6 +198,7 @@ font-style: italic;
   <ul>
   <li><a href="#getCase1"><code><span class="http-method">get</span> /case1</code></a></li>
   <li><a href="#issue7754"><code><span class="http-method">get</span> /issue7754</code></a></li>
+  <li><a href="#op"><code><span class="http-method">get</span> /pull75</code></a></li>
   <li><a href="#pull66"><code><span class="http-method">get</span> /pull66</code></a></li>
   </ul>
 
@@ -284,6 +285,44 @@ font-style: italic;
         <a href="#LongModel">LongModel</a>
   </div> <!-- method -->
   <hr/>
+  <div class="method"><a name="op"/>
+    <div class="method-path">
+    <a class="up" href="#__Methods">Up</a>
+    <pre class="get"><code class="huge"><span class="http-method">get</span> /pull75</code></pre></div>
+    <div class="method-summary"> (<span class="nickname">op</span>)</div>
+    <div class="method-notes"></div>
+
+
+
+
+
+
+
+    <h3 class="field-label">Return type</h3>
+    <div class="return-type">
+      <a href="#ObjWithEnums">ObjWithEnums</a>
+      
+    </div>
+
+    <!--Todo: process Response Object and its headers, schema, examples -->
+
+    <h3 class="field-label">Example data</h3>
+    <div class="example-data-content-type">Content-Type: application/json</div>
+    <pre class="example"><code>{ }</code></pre>
+
+    <h3 class="field-label">Produces</h3>
+    This API call produces the following media types according to the <span class="header">Accept</span> request header;
+    the media type will be conveyed by the <span class="header">Content-Type</span> response header.
+    <ul>
+      <li><code>application/json</code></li>
+    </ul>
+
+    <h3 class="field-label">Responses</h3>
+    <h4 class="field-label">200</h4>
+    Ok
+        <a href="#ObjWithEnums">ObjWithEnums</a>
+  </div> <!-- method -->
+  <hr/>
   <div class="method"><a name="pull66"/>
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
@@ -329,6 +368,8 @@ font-style: italic;
     <li><a href="#EnumInArrayOfArray"><code>EnumInArrayOfArray</code> - </a></li>
     <li><a href="#ItemWithBoolean"><code>ItemWithBoolean</code> - </a></li>
     <li><a href="#LongModel"><code>LongModel</code> - </a></li>
+    <li><a href="#ObjWithEnums"><code>ObjWithEnums</code> - </a></li>
+    <li><a href="#StringEnum"><code>StringEnum</code> - </a></li>
   </ol>
 
   <div class="model">
@@ -362,6 +403,19 @@ font-style: italic;
       <div class="param">Long1 (optional)</div><div class="param-desc"><span class="param-type"><a href="#long">Long</a></span>  </div>
 <div class="param">Long2 (optional)</div><div class="param-desc"><span class="param-type"><a href="#long">Long</a></span>  format: int64</div>
     </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="ObjWithEnums"><code>ObjWithEnums</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+      <div class="param">SProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#StringEnum">StringEnum</a></span>  </div>
+    </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="StringEnum"><code>StringEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
   </div>
   </body>
 </html>
