--- a/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
@@ -758,6 +758,18 @@ margin-bottom: 20px;
     }
   }
 };
+            defs.ObjWithEnums = {
+  "type" : "object",
+  "properties" : {
+    "SProp" : {
+      "$ref" : "#/components/schemas/StringEnum"
+    }
+  }
+};
+            defs.StringEnum = {
+  "type" : "string",
+  "enum" : [ "c", "b", "a" ]
+};
   </script>
 
   <div class="container-fluid">
@@ -780,6 +792,9 @@ margin-bottom: 20px;
                     </li>
                     <li data-group="Default" data-name="issue7754" class="">
                       <a href="#api-Default-issue7754">issue7754</a>
+                    </li>
+                    <li data-group="Default" data-name="op" class="">
+                      <a href="#api-Default-op">op</a>
                     </li>
                     <li data-group="Default" data-name="pull66" class="">
                       <a href="#api-Default-pull66">pull66</a>
@@ -1309,6 +1324,258 @@ except ApiException as e:
                                     </script>
                                   </div>
                                   <input id='responses-issue7754-200-schema-data' type='hidden' value=''></input>
+                                </div>
+                            </div>
+
+                        </article>
+                      </div>
+                      <hr>
+                    <div id="api-Default-op">
+                      <article id="api-Default-op-0" data-group="User" data-name="op" data-version="0">
+                        <div class="pull-left">
+                          <h1>op</h1>
+                          <p></p>
+                        </div>
+                        <div class="pull-right"></div>
+                        <div class="clearfix"></div>
+                        <p></p>
+                        <p class="marked"></p>
+                        <p></p>
+                        <br />
+                        <pre class="prettyprint language-html prettyprinted" data-type="get"><code><span class="pln">/pull75</span></code></pre>
+                        <p>
+                          <h3>Usage and SDK Samples</h3>
+                        </p>
+                        <ul class="nav nav-tabs nav-tabs-examples">
+                          <li class="active"><a href="#examples-Default-op-0-curl">Curl</a></li>
+                          <li class=""><a href="#examples-Default-op-0-java">Java</a></li>
+                          <li class=""><a href="#examples-Default-op-0-android">Android</a></li>
+                          <!--<li class=""><a href="#examples-Default-op-0-groovy">Groovy</a></li>-->
+                          <li class=""><a href="#examples-Default-op-0-objc">Obj-C</a></li>
+                          <li class=""><a href="#examples-Default-op-0-javascript">JavaScript</a></li>
+                          <!--<li class=""><a href="#examples-Default-op-0-angular">Angular</a></li>-->
+                          <li class=""><a href="#examples-Default-op-0-csharp">C#</a></li>
+                          <li class=""><a href="#examples-Default-op-0-php">PHP</a></li>
+                          <li class=""><a href="#examples-Default-op-0-perl">Perl</a></li>
+                          <li class=""><a href="#examples-Default-op-0-python">Python</a></li>
+                        </ul>
+
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="examples-Default-op-0-curl">
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "http://api.company.xyz/v2/pull75"</code></pre>
+                          </div>
+                          <div class="tab-pane" id="examples-Default-op-0-java">
+                            <pre class="prettyprint"><code class="language-java">import org.openapitools.client.*;
+import org.openapitools.client.auth.*;
+import org.openapitools.client.model.*;
+import org.openapitools.client.api.DefaultApi;
+
+import java.io.File;
+import java.util.*;
+
+public class DefaultApiExample {
+
+    public static void main(String[] args) {
+        
+        DefaultApi apiInstance = new DefaultApi();
+        try {
+            ObjWithEnums result = apiInstance.op();
+            System.out.println(result);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling DefaultApi#op");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+
+                          <div class="tab-pane" id="examples-Default-op-0-android">
+                            <pre class="prettyprint"><code class="language-java">import org.openapitools.client.api.DefaultApi;
+
+public class DefaultApiExample {
+
+    public static void main(String[] args) {
+        DefaultApi apiInstance = new DefaultApi();
+        try {
+            ObjWithEnums result = apiInstance.op();
+            System.out.println(result);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling DefaultApi#op");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+  <!--
+  <div class="tab-pane" id="examples-Default-op-0-groovy">
+  <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+  </div> -->
+                            <div class="tab-pane" id="examples-Default-op-0-objc">
+                              <pre class="prettyprint"><code class="language-cpp">
+DefaultApi *apiInstance = [[DefaultApi alloc] init];
+
+[apiInstance opWithCompletionHandler: 
+              ^(ObjWithEnums output, NSError* error) {
+                            if (output) {
+                                NSLog(@"%@", output);
+                            }
+                            if (error) {
+                                NSLog(@"Error: %@", error);
+                            }
+                        }];
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-op-0-javascript">
+                              <pre class="prettyprint"><code class="language-js">var OpenApiTreePots = require('open_api_tree_pots');
+
+var api = new OpenApiTreePots.DefaultApi()
+var callback = function(error, data, response) {
+  if (error) {
+    console.error(error);
+  } else {
+    console.log('API called successfully. Returned data: ' + data);
+  }
+};
+api.op(callback);
+</code></pre>
+                            </div>
+
+                            <!--<div class="tab-pane" id="examples-Default-op-0-angular">
+              <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+            </div>-->
+                            <div class="tab-pane" id="examples-Default-op-0-csharp">
+                              <pre class="prettyprint"><code class="language-cs">using System;
+using System.Diagnostics;
+using Org.OpenAPITools.Api;
+using Org.OpenAPITools.Client;
+using Org.OpenAPITools.Model;
+
+namespace Example
+{
+    public class opExample
+    {
+        public void main()
+        {
+            
+            var apiInstance = new DefaultApi();
+
+            try
+            {
+                ObjWithEnums result = apiInstance.op();
+                Debug.WriteLine(result);
+            }
+            catch (Exception e)
+            {
+                Debug.Print("Exception when calling DefaultApi.op: " + e.Message );
+            }
+        }
+    }
+}
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-op-0-php">
+                              <pre class="prettyprint"><code class="language-php"><&#63;php
+require_once(__DIR__ . '/vendor/autoload.php');
+
+$api_instance = new OpenAPITools\Client\Api\DefaultApi();
+
+try {
+    $result = $api_instance->op();
+    print_r($result);
+} catch (Exception $e) {
+    echo 'Exception when calling DefaultApi->op: ', $e->getMessage(), PHP_EOL;
+}
+?></code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-op-0-perl">
+                              <pre class="prettyprint"><code class="language-perl">use Data::Dumper;
+use WWW::OPenAPIClient::Configuration;
+use WWW::OPenAPIClient::DefaultApi;
+
+my $api_instance = WWW::OPenAPIClient::DefaultApi->new();
+
+eval { 
+    my $result = $api_instance->op();
+    print Dumper($result);
+};
+if ($@) {
+    warn "Exception when calling DefaultApi->op: $@\n";
+}</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Default-op-0-python">
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+import time
+import openapi_client
+from openapi_client.rest import ApiException
+from pprint import pprint
+
+# create an instance of the API class
+api_instance = openapi_client.DefaultApi()
+
+try: 
+    api_response = api_instance.op()
+    pprint(api_response)
+except ApiException as e:
+    print("Exception when calling DefaultApi->op: %s\n" % e)</code></pre>
+                            </div>
+                          </div>
+
+                          <h2>Parameters</h2>
+
+
+
+
+
+
+                          <h2>Responses</h2>
+                            <h3> Status: 200 - Ok </h3>
+
+                            <ul class="nav nav-tabs nav-tabs-examples" >
+                                <li class="active">
+                                  <a data-toggle="tab" href="#responses-op-200-schema">Schema</a>
+                                </li>
+
+                            </ul>
+
+                            <div class="tab-content" style='margin-bottom: 10px;'>
+                                <div class="tab-pane active" id="responses-op-200-schema">
+                                  <div id='responses-op-200-schema-200' style="padding: 30px; border-left: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;">
+                                    <script>
+                                      $(document).ready(function() {
+                                        var schemaWrapper = {
+  "description" : "Ok",
+  "content" : {
+    "application/json" : {
+      "schema" : {
+        "$ref" : "#/components/schemas/ObjWithEnums"
+      }
+    }
+  }
+};
+                                        var schema = schemaWrapper.schema;
+                                        if (schema.$ref != null) {
+                                          schema = defsParser.$refs.get(schema.$ref);
+                                        } else {
+                                          schemaWrapper.definitions = Object.assign({}, defs);
+                                          $RefParser.dereference(schemaWrapper).catch(function(err) {
+                                            console.log(err);
+                                          });
+                                        }
+
+                                        //console.log(JSON.stringify(schema));
+                                        var view = new JSONSchemaView(schema, 3);
+                                        $('#responses-op-200-schema-data').val(stringify(schema));
+                                        var result = $('#responses-op-200-schema-200');
+                                        result.empty();
+                                        result.append(view.render());
+                                      });
+                                    </script>
+                                  </div>
+                                  <input id='responses-op-200-schema-data' type='hidden' value=''></input>
                                 </div>
                             </div>
 
