--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -366,7 +366,9 @@ font-style: italic;
   <h3>Table of Contents</h3>
   <ol>
     <li><a href="#EnumInArrayOfArray"><code>EnumInArrayOfArray</code> - </a></li>
+    <li><a href="#IntEnum"><code>IntEnum</code> - </a></li>
     <li><a href="#ItemWithBoolean"><code>ItemWithBoolean</code> - </a></li>
+    <li><a href="#LongEnum"><code>LongEnum</code> - </a></li>
     <li><a href="#LongModel"><code>LongModel</code> - </a></li>
     <li><a href="#ObjWithEnums"><code>ObjWithEnums</code> - </a></li>
     <li><a href="#StringEnum"><code>StringEnum</code> - </a></li>
@@ -388,6 +390,12 @@ font-style: italic;
     </div>  <!-- field-items -->
   </div>
   <div class="model">
+    <h3><a name="IntEnum"><code>IntEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
+  </div>
+  <div class="model">
     <h3><a name="ItemWithBoolean"><code>ItemWithBoolean</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'></div>
     <div class="field-items">
@@ -395,6 +403,12 @@ font-style: italic;
 <div class="param">active (optional)</div><div class="param-desc"><span class="param-type"><a href="#boolean">Boolean</a></span>  </div>
 <div class="param">name (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  </div>
     </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="LongEnum"><code>LongEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
   </div>
   <div class="model">
     <h3><a name="LongModel"><code>LongModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
@@ -408,7 +422,9 @@ font-style: italic;
     <h3><a name="ObjWithEnums"><code>ObjWithEnums</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'></div>
     <div class="field-items">
-      <div class="param">SProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#StringEnum">StringEnum</a></span>  </div>
+      <div class="param">IProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#IntEnum">IntEnum</a></span>  </div>
+<div class="param">LProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#LongEnum">LongEnum</a></span>  </div>
+<div class="param">SProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#StringEnum">StringEnum</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
