--- a/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
@@ -731,6 +731,24 @@ margin-bottom: 20px;
     }
   }
 };
+            defs.ErrorModel = {
+  "type" : "object",
+  "properties" : {
+    "statusCode" : {
+      "type" : "integer",
+      "description" : "http status code",
+      "format" : "int32"
+    },
+    "statusDescription" : {
+      "type" : "string",
+      "description" : "http status reason phrase"
+    },
+    "errorMessage" : {
+      "type" : "string",
+      "description" : "error description"
+    }
+  }
+};
             defs.ItemWithBoolean = {
   "type" : "object",
   "properties" : {
@@ -766,6 +784,21 @@ margin-bottom: 20px;
     }
   }
 };
+            defs.SomeObject = {
+  "type" : "object",
+  "properties" : {
+    "id" : {
+      "type" : "integer",
+      "format" : "int32"
+    },
+    "firstName" : {
+      "type" : "string"
+    },
+    "lastName" : {
+      "type" : "string"
+    }
+  }
+};
             defs.StringEnum = {
   "type" : "string",
   "enum" : [ "c", "b", "a" ]
@@ -786,6 +819,10 @@ margin-bottom: 20px;
             -->
             <li class="nav-fixed nav-header active" data-group="_"><a href="#api-_">API Summary</a></li>
 
+                  <li class="nav-header" data-group="Ipsum"><a href="#api-Ipsum">API Methods - Ipsum</a></li>
+                    <li data-group="Ipsum" data-name="op" class="">
+                      <a href="#api-Ipsum-op">op</a>
+                    </li>
                   <li class="nav-header" data-group="Lorem"><a href="#api-Lorem">API Methods - Lorem</a></li>
                     <li data-group="Lorem" data-name="getCase1" class="">
                       <a href="#api-Lorem-getCase1">getCase1</a>
@@ -818,6 +855,308 @@ margin-bottom: 20px;
           </div>
         </div>
         <div id="sections">
+                <section id="api-Ipsum">
+                  <h1>Ipsum</h1>
+                    <div id="api-Ipsum-op">
+                      <article id="api-Ipsum-op-0" data-group="User" data-name="op" data-version="0">
+                        <div class="pull-left">
+                          <h1>op</h1>
+                          <p></p>
+                        </div>
+                        <div class="pull-right"></div>
+                        <div class="clearfix"></div>
+                        <p></p>
+                        <p class="marked"></p>
+                        <p></p>
+                        <br />
+                        <pre class="prettyprint language-html prettyprinted" data-type="get"><code><span class="pln">/ipsum/issue199</span></code></pre>
+                        <p>
+                          <h3>Usage and SDK Samples</h3>
+                        </p>
+                        <ul class="nav nav-tabs nav-tabs-examples">
+                          <li class="active"><a href="#examples-Ipsum-op-0-curl">Curl</a></li>
+                          <li class=""><a href="#examples-Ipsum-op-0-java">Java</a></li>
+                          <li class=""><a href="#examples-Ipsum-op-0-android">Android</a></li>
+                          <!--<li class=""><a href="#examples-Ipsum-op-0-groovy">Groovy</a></li>-->
+                          <li class=""><a href="#examples-Ipsum-op-0-objc">Obj-C</a></li>
+                          <li class=""><a href="#examples-Ipsum-op-0-javascript">JavaScript</a></li>
+                          <!--<li class=""><a href="#examples-Ipsum-op-0-angular">Angular</a></li>-->
+                          <li class=""><a href="#examples-Ipsum-op-0-csharp">C#</a></li>
+                          <li class=""><a href="#examples-Ipsum-op-0-php">PHP</a></li>
+                          <li class=""><a href="#examples-Ipsum-op-0-perl">Perl</a></li>
+                          <li class=""><a href="#examples-Ipsum-op-0-python">Python</a></li>
+                        </ul>
+
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="examples-Ipsum-op-0-curl">
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "http://api.company.xyz/v2/ipsum/issue199"</code></pre>
+                          </div>
+                          <div class="tab-pane" id="examples-Ipsum-op-0-java">
+                            <pre class="prettyprint"><code class="language-java">import org.openapitools.client.*;
+import org.openapitools.client.auth.*;
+import org.openapitools.client.model.*;
+import org.openapitools.client.api.IpsumApi;
+
+import java.io.File;
+import java.util.*;
+
+public class IpsumApiExample {
+
+    public static void main(String[] args) {
+        
+        IpsumApi apiInstance = new IpsumApi();
+        try {
+            SomeObject result = apiInstance.op();
+            System.out.println(result);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling IpsumApi#op");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+
+                          <div class="tab-pane" id="examples-Ipsum-op-0-android">
+                            <pre class="prettyprint"><code class="language-java">import org.openapitools.client.api.IpsumApi;
+
+public class IpsumApiExample {
+
+    public static void main(String[] args) {
+        IpsumApi apiInstance = new IpsumApi();
+        try {
+            SomeObject result = apiInstance.op();
+            System.out.println(result);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling IpsumApi#op");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+  <!--
+  <div class="tab-pane" id="examples-Ipsum-op-0-groovy">
+  <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+  </div> -->
+                            <div class="tab-pane" id="examples-Ipsum-op-0-objc">
+                              <pre class="prettyprint"><code class="language-cpp">
+IpsumApi *apiInstance = [[IpsumApi alloc] init];
+
+[apiInstance opWithCompletionHandler: 
+              ^(SomeObject output, NSError* error) {
+                            if (output) {
+                                NSLog(@"%@", output);
+                            }
+                            if (error) {
+                                NSLog(@"Error: %@", error);
+                            }
+                        }];
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Ipsum-op-0-javascript">
+                              <pre class="prettyprint"><code class="language-js">var OpenApiTreePots = require('open_api_tree_pots');
+
+var api = new OpenApiTreePots.IpsumApi()
+var callback = function(error, data, response) {
+  if (error) {
+    console.error(error);
+  } else {
+    console.log('API called successfully. Returned data: ' + data);
+  }
+};
+api.op(callback);
+</code></pre>
+                            </div>
+
+                            <!--<div class="tab-pane" id="examples-Ipsum-op-0-angular">
+              <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+            </div>-->
+                            <div class="tab-pane" id="examples-Ipsum-op-0-csharp">
+                              <pre class="prettyprint"><code class="language-cs">using System;
+using System.Diagnostics;
+using Org.OpenAPITools.Api;
+using Org.OpenAPITools.Client;
+using Org.OpenAPITools.Model;
+
+namespace Example
+{
+    public class opExample
+    {
+        public void main()
+        {
+            
+            var apiInstance = new IpsumApi();
+
+            try
+            {
+                SomeObject result = apiInstance.op();
+                Debug.WriteLine(result);
+            }
+            catch (Exception e)
+            {
+                Debug.Print("Exception when calling IpsumApi.op: " + e.Message );
+            }
+        }
+    }
+}
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Ipsum-op-0-php">
+                              <pre class="prettyprint"><code class="language-php"><&#63;php
+require_once(__DIR__ . '/vendor/autoload.php');
+
+$api_instance = new OpenAPITools\Client\Api\IpsumApi();
+
+try {
+    $result = $api_instance->op();
+    print_r($result);
+} catch (Exception $e) {
+    echo 'Exception when calling IpsumApi->op: ', $e->getMessage(), PHP_EOL;
+}
+?></code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Ipsum-op-0-perl">
+                              <pre class="prettyprint"><code class="language-perl">use Data::Dumper;
+use WWW::OPenAPIClient::Configuration;
+use WWW::OPenAPIClient::IpsumApi;
+
+my $api_instance = WWW::OPenAPIClient::IpsumApi->new();
+
+eval { 
+    my $result = $api_instance->op();
+    print Dumper($result);
+};
+if ($@) {
+    warn "Exception when calling IpsumApi->op: $@\n";
+}</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-Ipsum-op-0-python">
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+import time
+import openapi_client
+from openapi_client.rest import ApiException
+from pprint import pprint
+
+# create an instance of the API class
+api_instance = openapi_client.IpsumApi()
+
+try: 
+    api_response = api_instance.op()
+    pprint(api_response)
+except ApiException as e:
+    print("Exception when calling IpsumApi->op: %s\n" % e)</code></pre>
+                            </div>
+                          </div>
+
+                          <h2>Parameters</h2>
+
+
+
+
+
+
+                          <h2>Responses</h2>
+                            <h3> Status: 200 - a pet to be returned </h3>
+
+                            <ul class="nav nav-tabs nav-tabs-examples" >
+                                <li class="active">
+                                  <a data-toggle="tab" href="#responses-op-200-schema">Schema</a>
+                                </li>
+
+                            </ul>
+
+                            <div class="tab-content" style='margin-bottom: 10px;'>
+                                <div class="tab-pane active" id="responses-op-200-schema">
+                                  <div id='responses-op-200-schema-200' style="padding: 30px; border-left: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;">
+                                    <script>
+                                      $(document).ready(function() {
+                                        var schemaWrapper = {
+  "description" : "a pet to be returned",
+  "content" : {
+    "application/json" : {
+      "schema" : {
+        "$ref" : "#/components/schemas/SomeObject"
+      }
+    }
+  }
+};
+                                        var schema = schemaWrapper.schema;
+                                        if (schema.$ref != null) {
+                                          schema = defsParser.$refs.get(schema.$ref);
+                                        } else {
+                                          schemaWrapper.definitions = Object.assign({}, defs);
+                                          $RefParser.dereference(schemaWrapper).catch(function(err) {
+                                            console.log(err);
+                                          });
+                                        }
+
+                                        //console.log(JSON.stringify(schema));
+                                        var view = new JSONSchemaView(schema, 3);
+                                        $('#responses-op-200-schema-data').val(stringify(schema));
+                                        var result = $('#responses-op-200-schema-200');
+                                        result.empty();
+                                        result.append(view.render());
+                                      });
+                                    </script>
+                                  </div>
+                                  <input id='responses-op-200-schema-data' type='hidden' value=''></input>
+                                </div>
+                            </div>
+
+                            <h3> Status: default - Unexpected error </h3>
+
+                            <ul class="nav nav-tabs nav-tabs-examples" >
+                                <li class="active">
+                                  <a data-toggle="tab" href="#responses-op-default-schema">Schema</a>
+                                </li>
+
+                            </ul>
+
+                            <div class="tab-content" style='margin-bottom: 10px;'>
+                                <div class="tab-pane active" id="responses-op-default-schema">
+                                  <div id='responses-op-default-schema-default' style="padding: 30px; border-left: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;">
+                                    <script>
+                                      $(document).ready(function() {
+                                        var schemaWrapper = {
+  "description" : "Unexpected error",
+  "content" : {
+    "application/json" : {
+      "schema" : {
+        "$ref" : "#/components/schemas/ErrorModel"
+      }
+    }
+  }
+};
+                                        var schema = schemaWrapper.schema;
+                                        if (schema.$ref != null) {
+                                          schema = defsParser.$refs.get(schema.$ref);
+                                        } else {
+                                          schemaWrapper.definitions = Object.assign({}, defs);
+                                          $RefParser.dereference(schemaWrapper).catch(function(err) {
+                                            console.log(err);
+                                          });
+                                        }
+
+                                        //console.log(JSON.stringify(schema));
+                                        var view = new JSONSchemaView(schema, 3);
+                                        $('#responses-op-default-schema-data').val(stringify(schema));
+                                        var result = $('#responses-op-default-schema-default');
+                                        result.empty();
+                                        result.append(view.render());
+                                      });
+                                    </script>
+                                  </div>
+                                  <input id='responses-op-default-schema-data' type='hidden' value=''></input>
+                                </div>
+                            </div>
+
+                        </article>
+                      </div>
+                      <hr>
+                  </section>
                 <section id="api-Lorem">
                   <h1>Lorem</h1>
                     <div id="api-Lorem-getCase1">
