--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -319,7 +319,8 @@ font-style: italic;
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
     <pre class="example"><code>{
-  "Long2" : 0
+  "Long2" : 6,
+  "Long1" : 0
 }</code></pre>
 
     <h3 class="field-label">Produces</h3>
@@ -461,7 +462,7 @@ font-style: italic;
     <h3><a name="LongModel"><code>LongModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'></div>
     <div class="field-items">
-      <div class="param">Long1 (optional)</div><div class="param-desc"><span class="param-type"><a href="#long">Long</a></span>  </div>
+      <div class="param">Long1 (optional)</div><div class="param-desc"><span class="param-type"><a href="#long">Long</a></span>  format: int64</div>
 <div class="param">Long2 (optional)</div><div class="param-desc"><span class="param-type"><a href="#long">Long</a></span>  format: int64</div>
     </div>  <!-- field-items -->
   </div>
