--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -203,6 +203,7 @@ font-style: italic;
   <li><a href="#getCase1"><code><span class="http-method">get</span> /case1</code></a></li>
   <li><a href="#issue7754"><code><span class="http-method">get</span> /issue7754</code></a></li>
   <li><a href="#op"><code><span class="http-method">get</span> /pull75</code></a></li>
+  <li><a href="#op708"><code><span class="http-method">get</span> /pull708</code></a></li>
   <li><a href="#pull66"><code><span class="http-method">get</span> /pull66</code></a></li>
   </ul>
 
@@ -375,6 +376,36 @@ font-style: italic;
     <h4 class="field-label">200</h4>
     Ok
         <a href="#ObjWithEnums">ObjWithEnums</a>
+  </div> <!-- method -->
+  <hr/>
+  <div class="method"><a name="op708"/>
+    <div class="method-path">
+    <a class="up" href="#__Methods">Up</a>
+    <pre class="get"><code class="huge"><span class="http-method">get</span> /pull708</code></pre></div>
+    <div class="method-summary"> (<span class="nickname">op708</span>)</div>
+    <div class="method-notes"></div>
+
+
+
+
+
+    <h3 class="field-label">Query parameters</h3>
+    <div class="field-items">
+      <div class="param">bar (optional)</div>
+
+      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash;  default: foobar </div>
+    </div>  <!-- field-items -->
+
+
+
+    <!--Todo: process Response Object and its headers, schema, examples -->
+
+
+
+    <h3 class="field-label">Responses</h3>
+    <h4 class="field-label">default</h4>
+    successful operation
+        <a href="#"></a>
   </div> <!-- method -->
   <hr/>
   <div class="method"><a name="pull66"/>
