--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -451,6 +451,7 @@ font-style: italic;
   <h3>Table of Contents</h3>
   <ol>
     <li><a href="#EnumInArrayOfArray"><code>EnumInArrayOfArray</code> - </a></li>
+    <li><a href="#EnumWithCustomName"><code>EnumWithCustomName</code> - </a></li>
     <li><a href="#ErrorModel"><code>ErrorModel</code> - </a></li>
     <li><a href="#IntEnum"><code>IntEnum</code> - </a></li>
     <li><a href="#ItemWithBoolean"><code>ItemWithBoolean</code> - </a></li>
@@ -475,6 +476,12 @@ font-style: italic;
         <div class="param-enum-header">Enum:</div>
         
     </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="EnumWithCustomName"><code>EnumWithCustomName</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
   </div>
   <div class="model">
     <h3><a name="ErrorModel"><code>ErrorModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
