--- a/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
@@ -851,6 +851,12 @@ ul.nav-tabs {
     }
   }
 };
+    defs["EnumWithCustomName"] = {
+  "type" : "integer",
+  "format" : "int32",
+  "enum" : [ 1, 2 ],
+  "x-enum-varnames" : [ "FOO", "BAR" ]
+};
     defs["ErrorModel"] = {
   "type" : "object",
   "properties" : {
