--- a/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html2/index.html
@@ -994,8 +994,17 @@ ul.nav-tabs {
     "SProp" : {
       "$ref" : "#/components/schemas/StringEnum"
     },
+    "IProp2" : {
+      "$ref" : "#/components/schemas/Int2Enum"
+    },
+    "LProp2" : {
+      "$ref" : "#/components/schemas/Long2Enum"
+    },
     "SProp2" : {
       "$ref" : "#/components/schemas/String2Enum"
+    },
+    "Custom" : {
+      "$ref" : "#/components/schemas/Enum2WithCustomName"
     }
   }
 };
