--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -628,7 +628,10 @@ font-style: italic;
       <div class="param">IProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#IntEnum">IntEnum</a></span>  </div>
 <div class="param">LProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#LongEnum">LongEnum</a></span>  </div>
 <div class="param">SProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#StringEnum">StringEnum</a></span>  </div>
+<div class="param">IProp2 (optional)</div><div class="param-desc"><span class="param-type"><a href="#Int2Enum">Int2Enum</a></span>  </div>
+<div class="param">LProp2 (optional)</div><div class="param-desc"><span class="param-type"><a href="#Long2Enum">Long2Enum</a></span>  </div>
 <div class="param">SProp2 (optional)</div><div class="param-desc"><span class="param-type"><a href="#String2Enum">String2Enum</a></span>  </div>
+<div class="param">Custom (optional)</div><div class="param-desc"><span class="param-type"><a href="#Enum2WithCustomName">Enum2WithCustomName</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
